--- a/web/acessoBalconista.xhtml
+++ b/web/acessoBalconista.xhtml
@@ -17,13 +17,13 @@
         <style>
             .popup {
                 position: fixed;
-                top: 140px;
-                bottom: 0;
-                left: 0;
-                right: -500px;
+                top: 0px;
+                bottom: 0px;
+                left: 0px;
+                right: 0px;
                 margin: auto;
                 width: 600px;
-                height: 420px;
+                height: 350px;
                 padding: 15px;
                 border: solid 1pX black;
                 background: white;
@@ -46,7 +46,7 @@
 
             .fechar {
                 position: absolute;
-                top: -370px;
+                top: -300px;
                 bottom: 0;
                 left: 0;
                 right: -550px;
@@ -68,23 +68,37 @@
                 margin: auto;
                 width: 250px;
                 height: 200px;
-                background: white;
             }
 
-            .emprestimo {
+            #emprestimo {
                 position: fixed;
-                top: -100px;
+                top: 100px;
                 bottom: 0;
                 left: 0;
-                right: 460px;
+                right: 538px;
                 margin: auto;
-                width: 350px;
-                height: 200px;
-                background: white;
+                width: 300px;
+                height: 400px;
             }
 
-            .emp{
+            #utilitarios {
+                position: fixed;
+                top: 100px;
+                bottom: 0;
+                left: 0;
+                right: 40px;
+                margin: auto;
+                width: 194px;
+                height: 400px;
+                border: 1px black;
+            }
+
+            .emp {
                 height: 216px;
+            }
+
+            .reset{
+                display: none;
             }
         </style>
     </meta>
@@ -100,23 +114,6 @@
     </script>
 </h:head>
 <h:body>
-    <div id="popup" class="popup">
-        <p> Olá, notamos que você é um <b>Balconista(a)</b>, então temos as opções:
-            <button class="fechar" onclick="fechar()">x</button>
-            <p>
-                <b>Cadastrar Usuário:</b> Realiza o cadastramento de um novo usuário ativo e com permissão.<br/>
-                <b>Consultar Usuário:</b> Realiza a busca por usuário(s), exibindo-os em uma tabela.<br/>
-                <b>Alterar Usuário:</b> Realiza a alteração dos dados de um usuário.<br/>
-                <b>Deletar Usuário:</b> Realiza a inativação do cadastro do usuário.<br/>
-                <br/><br/>
-                <b>Cadastrar Empréstimo:</b> Realiza a criação de um novo empréstimo é realizado no sistema.<br/>
-                <b>Consultar Empréstimo:</b> Reliza a busca pelos dados de um determinado empréstimo.<br/>
-                <b>Alterar Empréstimo:</b> Reliza a alteração/atualização dos dados de um empréstimo.<br/>
-                <b>Deletar Empréstimo:</b> Reliza a inativação de um determinado empréstimo, setando livro como disponível em seguida.<br/>
-            </p><b></b>
-        </p>
-    </div>
-
     <!--RETORNOS-->
     <div align="left" class="retornos" id="retornos">
         <b>
@@ -126,14 +123,18 @@
             <font color="#{c_Emprestimo.emp.color_msg_retorno}">
                 #{c_Emprestimo.emp.msg_retorno}
             </font>
+            <font color="#{c_Livro.livro.color_msg_retorno}">
+                #{c_Livro.livro.msg_retorno}
+            </font>
         </b>
     </div>
     <i><h1 align="center"> BiblioTec </h1></i>
-    <p:menubar style="align-items: center">
-        <p:menuitem value="SAIR" url="gestaoBibliotecas.xhtml"></p:menuitem>
-        <p:menuitem value="ACERVO" url="consultarAcervoBalconista.xhtml"></p:menuitem>
-        <p:menuitem value="AJUDA?" url="javascript: abrir();"></p:menuitem>
-    </p:menubar>
+    <h:form>
+        <p:menubar style="align-items: center">
+            <p:menuitem value="SAIR" action="#{c_Login.logoutSession}"/>
+            <p:menuitem value="AJUDA?" url="javascript: abrir();"></p:menuitem>
+        </p:menubar>
+    </h:form>
     <div class="usuarios" id="usuarios">
         <section alig="center" class="row">
             <div class="jumbotron">
@@ -163,34 +164,113 @@
             </div>
         </section>
     </div>
-    <div class="emprestimo" id="emprestimo">
-        <section class="row">
-            <div class="jumbotron">
-                <h:form id="telaBalconista1">
-                    <div class="form-group">
-                        <h5 align="center">Controle de Empréstimos</h5>
-                    </div>
-                    <div class="emp">
-                        <div class="form-group">
-                            <h:commandButton value="Cadastrar" class="btn btn-block btn-primary"
-                                             action="cadastrarEmprestimo?faces-redirect=true"></h:commandButton>
+    <div class="jumbotron" id="emprestimo">
+        <section alig="center" class="row">
+            <h:form id="telaBalconista1">
+                <div class="form-group">
+                    <h5 align="center">Controle de Empréstimos</h5>
+                </div>
+                <div class="form-group">
+                    <h:commandButton value="Cadastrar" class="btn btn-block btn-primary"
+                                     action="cadastrarEmprestimo?faces-redirect=true"></h:commandButton>
 
-                            <h:commandButton value="Consultar" class="btn btn-block btn-primary"
-                                             action="consultarEmprestimo?faces-redirect=true"></h:commandButton>
+                    <h:commandButton value="Consultar" class="btn btn-block btn-primary"
+                                     action="consultarEmprestimo?faces-redirect=true"></h:commandButton>
 
-                            <h:commandButton value="Alterar" class="btn btn-block btn-primary"
-                                             action="alterarEmprestimo?faces-redirect=true"></h:commandButton>
+                    <h:commandButton value="Alterar" class="btn btn-block btn-primary"
+                                     action="alterarEmprestimo?faces-redirect=true"></h:commandButton>
 
-                            <h:commandButton value="Finalizar" class="btn btn-block btn-primary"
-                                             action="deletarEmprestimo?faces-redirect=true"></h:commandButton>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <p></p>
-                    </div>
-                </h:form>
-            </div>
+                    <h:commandButton value="Finalizar" class="btn btn-block btn-primary"
+                                     action="deletarEmprestimo?faces-redirect=true"></h:commandButton>
+                </div>
+            </h:form>
         </section>
+    </div>
+    <div class="jumbotron" id="utilitarios">
+        <section alig="center" class="row">
+            <h:form>
+                <div class="form-group">
+                    <h5 align="center">Utilitários</h5>
+                </div>
+                <div class="form-group">
+                    <h:commandButton value="Consultar Livros" class="btn btn-block btn-primary"
+                                     action="consultarAcervoBalconista?faces-redirect=true"></h:commandButton>
+
+                    <h:commandButton value="Reservar Livros" class="btn btn-block btn-primary"
+                                     action="cadastrarReserva?faces-redirect=true"/>
+
+                    <h:commandButton value="Cancelar Reservas" class="btn btn-block btn-primary"
+                                     action="cancelarReserva?faces-redirect=true"/>
+
+                    <h:commandButton value="Minhas Reservas" class="btn btn-block btn-primary"
+                                     action="minhasReservas?faces-redirect=true"/>
+
+                    <h:commandButton value="Meus Empréstimos" class="btn btn-block btn-primary"
+                                     action="meusEmprestimos?faces-redirect=true"></h:commandButton>
+
+                    <h:commandButton value="Dados Cadastrais" class="btn btn-block btn-primary"
+                                     action="meusDados?faces-redirect=true"></h:commandButton>
+                </div>
+                <div id="popup" class="popup">
+                    <p>
+                        <button class="fechar" onclick="fechar()">x</button>
+                        <b></b>
+                        <p>
+                            Olá, notamos que você é um <b>Balconista</b>, então temos as sessões:
+                        </p>
+                        <b></b>
+                        <p>
+                            <b>
+                                - Controle de Usuários :
+                            </b>
+                            Onde você poderá cadastrar um novo usuários, consultar os dados de um determinado usuário, alterar as informações cadastrais do usuário e até mesmo excluí-lo.
+                        </p>
+                        <b></b>
+                        <p>
+                            <b>
+                                - Controle de Empréstimos :
+                            </b>
+                            Onde você poderá cadastrar um empréstimo, consultar dos dados de um determinado empréstimo, alterar as informações do empréstimo desejado e até mesmo marcar o empréstimo como finalizado.
+                        </p>
+                        <b></b>
+                        <p>
+                            <b>
+                                - Utilitários :
+                            </b>
+                            Nesta sessão você pode consultar os livros do acervo, e ter informações sobre os empréstimos em seu nome e até mesmo atualizar uas informações cadastrais.
+                        </p>
+
+                    </p>
+                </div>
+            </h:form>
+        </section>
+        <div class="reset">
+            #{c_Usuario.user.msg_autenticacao = ''}
+            #{c_Usuario.user.color_msg = ''}
+            #{c_Emprestimo.emp.msg_retorno = ''}
+            #{c_Emprestimo.emp.color_msg_retorno = ''}
+            #{c_Emprestimo.emp.codusuario = ''}
+            #{c_Emprestimo.emp.codemprestimo = ''}
+            #{c_Usuario.user.nome = ''}
+            #{c_Usuario.user.usuario = ''}
+            #{c_Usuario.user.senha = ''}
+            #{c_Usuario.user.rg = ''}
+            #{c_Usuario.user.cpf = ''}
+            #{c_Usuario.user.email = ''}
+            #{c_Usuario.user.endereco = ''}
+            #{c_Usuario.user.cep = ''}
+            #{c_Usuario.user.cidade = ''}
+            #{c_Usuario.user.estado = ''}
+            #{c_Usuario.user.datanasc = ''}
+            #{c_Usuario.user.permissao = ''}
+            #{c_Usuario.user.ativo = -1}
+            #{c_Usuario.user.codusuario = ''}
+            #{c_Livro.livro.msg_retorno = ''}
+            #{c_Livro.livro.codlivro = -1}
+            #{c_Livro.livro.titulo = ''}
+            #{c_Emprestimo.emp.codlivro = -1}
+            #{c_Emprestimo.emp.datadev = ''}
+        </div>
     </div>
 </h:body>
 </html>
