--- a/web/acessoBibliotecario.xhtml
+++ b/web/acessoBibliotecario.xhtml
@@ -17,7 +17,7 @@
         <style>
             .fechar {
                 position: absolute;
-                top: -370px;
+                top: -240px;
                 bottom: 0;
                 left: 0;
                 right: -460px;
@@ -34,10 +34,10 @@
                 position: fixed;
                 top: -350px;
                 bottom: 0;
-                left: 200px;
+                left: 0px;
                 right: 0px;
                 margin: auto;
-                width: 1140px;
+                width: 1340px;
                 height: 45px;
                 padding: 15px;
                 border: solid 1pX black;
@@ -52,25 +52,40 @@
                 right: 0;
                 margin: auto;
                 width: 500px;
-                height: 410px;
+                height: 280px;
                 padding: 15px;
                 border: solid 1pX black;
                 background: white;
                 display: none;
             }
 
-            .section {
+            #section {
                 position: fixed;
-                top: -126px;
+                top: 100px;
                 bottom: 0;
                 left: 0;
                 right: 1150px;
                 margin: auto;
                 width: 200px;
-                height: 300px;
-                padding: 15px;
+                height: 400px;
                 border-radius: 5px;
                 color: black;
+            }
+
+            #utilitarios {
+                position: fixed;
+                top: 100px;
+                bottom: 0;
+                left: 0;
+                right: 753px;
+                margin: auto;
+                width: 194px;
+                height: 400px;
+                border: 1px black;
+            }
+
+            .resetValues{
+                display: none;
             }
         </style>
     </meta>
@@ -86,94 +101,121 @@
     </script>
 </h:head>
 <h:body>
-    <div id="popup" class="popup">
-        <p>
-            <button class="fechar" onclick="fechar()">x</button>
-            <b></b>
-            <p>
-                Olá, notamos que você é um <b>Bibliotecário(a)</b>, então temos as opções:
-            </p>
-            <b></b>
-            <p>
-                <b>
-                    - Cadastrar :
-                </b>
-                Realiza o cadastramento de um novo livro no sistema.
-            </p>
-            <b></b>
-            <p>
-                <b>
-                    - Consultar :
-                </b>
-                Possibilita buscar os dados de um livro preenchendo o Título.
-            </p>
-            <b></b>
-            <p>
-                <b>
-                    - Alterar :
-                </b>
-                Caso perceba que algum dado do livro está incorreto, esta opção ajudará a corrigir fazendo a atualização das informações.
-            </p>
-            <b></b>
-            <p>
-                <b>
-                    - Deletar :
-                </b>
-                Esta opção poderá ser utilizada quando algum livro deixar de existir em sua biblioteca, isso acarretará em baixa do livro em nosso sistema.
-            </p>
-        </p>
-    </div>
-
     <div align="left" class="retornos" id="retornos">
         <b>
             <font color="#{c_Livro.livro.color_msg_retorno}">
                 #{c_Livro.livro.msg_retorno}
+            </font>
+            <font color="#{c_Usuario.user.color_msg}">
+                #{c_Usuario.user.msg_autenticacao}
             </font>
         </b>
     </div>
 
     <i><h1 align="center"> BiblioTec </h1></i>
     <div id="menu" class="menu">
-        <p:menubar style="align-items: center">
-            <p:menuitem value="SAIR" url="gestaoBibliotecas.xhtml"></p:menuitem>
-            <p:menuitem value="AJUDA?" url="javascript: abrir();"></p:menuitem>
-        </p:menubar>
+        <h:form>
+            <p:menubar style="align-items: center">
+                <p:menuitem value="SAIR" action="#{c_Login.logoutSession}"/>
+                <p:menuitem value="AJUDA?" url="javascript: abrir();"></p:menuitem>
+            </p:menubar>
+        </h:form>
     </div>
-    <div id="section" class="section">
+    <div id="section" class="jumbotron">
         <section alig="center" class="row">
-            <div class="jumbotron">
-                <h:form id="telaBibliotecario">
+            <h:form id="telaBibliotecario">
+                <h5 align="center">Controle de Livros</h5><br/>
+                <div class="form-group">
+
+                    <h:commandButton value="Cadastrar" class="btn btn-block btn-primary"
+                                     action="cadastrarLivro?faces-redirect=true"
+                                     url="cadastrarLivro.xhtml"></h:commandButton>
+
+
+                    <h:commandButton value="Consultar" class="btn btn-block btn-primary"
+                                     action="consultarLivro?faces-redirect=true"
+                                     url="consultarLivro.xhtml"></h:commandButton>
+
+
+                    <h:commandButton value="Alterar" class="btn btn-block btn-primary"
+                                     action="alterarLivro?faces-redirect=true"
+                                     url="cadastrarLivro.xhtml"></h:commandButton>
+
+
+                    <h:commandButton value="Deletar" class="btn btn-block btn-primary"
+                                     action="deletarLivro?faces-redirect=true"
+                                     url="deletarLivro.xhtml"></h:commandButton>
+                </div>
+                <div class="form-group">
+                    <p> Perfil: Bibliotecário</p>
+                </div>
+            </h:form>
+        </section>
+    </div>
+    <div class="jumbotron" id="utilitarios">
+        <section alig="center" class="row">
+            <div class="user">
+                <h:form>
+                    <h5 align="center">Utilitários</h5><br/>
                     <div class="form-group">
-                        <h5 align="center">Acervo de Livros</h5><br/>
-                    </div>
-                    <div class="form-group">
-                        <div class="form-group">
-                            <h:commandButton value="Cadastrar" class="btn btn-block btn-primary"
-                                             action="cadastrarLivro?faces-redirect=true"
-                                             url="cadastrarLivro.xhtml"></h:commandButton>
-                        </div>
-                        <div class="form-group">
-                            <h:commandButton value="Consultar" class="btn btn-block btn-primary"
-                                             action="consultarLivro?faces-redirect=true"
-                                             url="consultarLivro.xhtml"></h:commandButton>
-                        </div>
-                        <div class="form-group">
-                            <h:commandButton value="Alterar" class="btn btn-block btn-primary"
-                                             action="alterarLivro?faces-redirect=true"
-                                             url="cadastrarLivro.xhtml"></h:commandButton>
-                        </div>
-                        <div class="form-group">
-                            <h:commandButton value="Deletar" class="btn btn-block btn-primary"
-                                             action="deletarLivro?faces-redirect=true"
-                                             url="deletarLivro.xhtml"></h:commandButton>
-                        </div>
-                        <div class="form-group">
-                            <p> Perfil: Bibliotecário</p>
-                        </div>
+                        <h:commandButton value="Reservar Livros" class="btn btn-block btn-primary"
+                                         action="cadastrarReserva?faces-redirect=true"/>
+
+                        <h:commandButton value="Cancelar Reservas" class="btn btn-block btn-primary"
+                                         action="cancelarReserva?faces-redirect=true"/>
+
+                        <h:commandButton value="Minhas Reservas" class="btn btn-block btn-primary"
+                                         action="minhasReservas?faces-redirect=true"/>
+
+                        <h:commandButton value="Meus Empréstimos" class="btn btn-block btn-primary"
+                                         action="meusEmprestimos?faces-redirect=true"></h:commandButton>
+
+                        <h:commandButton value="Dados Cadastrais" class="btn btn-block btn-primary"
+                                         action="meusDados?faces-redirect=true"></h:commandButton>
                     </div>
                 </h:form>
             </div>
         </section>
+        <div id="popup" class="popup">
+            <p>
+                <button class="fechar" onclick="fechar()">x</button>
+                <b></b>
+                <p>
+                    Olá, notamos que você é um <b>Bibliotecário(a)</b>, então temos as sessões:
+                </p>
+                <b></b>
+                <p>
+                    <b>
+                        - Controle de Livros :
+                    </b>
+                    Onde você poderá cadastrae um novo livro, consultar os dados de um determinado livro, alterar as informações cadastrais do livro e até mesmo excluí-lo.
+                </p>
+                <b></b>
+                <p>
+                    <b>
+                        - Utilitários :
+                    </b>
+                    Nesta sessão você pode consultar os livros do acervo, e ter informações sobre os empréstimos em seu nome e até mesmo atualizar uas informações cadastrais.
+                </p>
+            </p>
+        </div>
+        <div class="resetValues">
+            #{c_Usuario.user.msg_autenticacao = ''}
+            #{c_Usuario.user.nome = ''}
+            #{c_Usuario.user.usuario = ''}
+            #{c_Usuario.user.senha = ''}
+            #{c_Usuario.user.rg = ''}
+            #{c_Usuario.user.cpf = ''}
+            #{c_Usuario.user.email = ''}
+            #{c_Usuario.user.endereco = ''}
+            #{c_Usuario.user.cep = ''}
+            #{c_Usuario.user.cidade = ''}
+            #{c_Usuario.user.estado = ''}
+            #{c_Usuario.user.datanasc = ''}
+            #{c_Livro.livro.msg_retorno = ''}
+            #{c_Livro.livro.codlivro = -1}
+            #{c_Livro.livro.titulo = ''}
+        </div>
     </div>
 </h:body>
 </html>
