--- a/web/cadastrarLivro.xhtml
+++ b/web/cadastrarLivro.xhtml
@@ -114,8 +114,7 @@
                                  maxlength="60" required="true" placeholder="Insira o nome da editora"></p:inputText>
 
                     <h:outputLabel value="Ano Lançamento"/><font color="red">*</font>
-                    <p:inputText value="#{c_Livro.livro.anolancamento}" class="form-control"
-                                 maxlength="4" required="true" placeholder="Insira o ano lançamento"></p:inputText>
+                    <p:inputMask class="form-control" value="#{c_Livro.livro.anolancamento}" mask="9999" required="true" placeholder="Insira o ano de lançamento do livro" maxlength="4"/>
                 </div>
                 <div class="form-group">
                     <h:outputLabel value="Cidade"/><font color="red">*</font>
@@ -123,8 +122,7 @@
                                  maxlength="60" required="true" placeholder="Insira a cidade"></p:inputText>
 
                     <h:outputLabel value="Volume"/><font color="red">*</font>
-                    <p:inputText value="#{c_Livro.livro.volume}" class="form-control"
-                                 maxlength="2" required="true" placeholder="Insira o volume"></p:inputText>
+                    <p:inputMask class="form-control" value="#{c_Livro.livro.volume}" mask="99" required="true" placeholder="Insira o volume do livro" maxlength="2"/>
 
                     <h:outputLabel value="Código de Catalogação"/><font color="red">*</font>
                     <p:inputText value="#{c_Livro.livro.codcatalogacao}" class="form-control"
