--- a/web/cadastrarUsuarioBalconista.xhtml
+++ b/web/cadastrarUsuarioBalconista.xhtml
@@ -46,7 +46,7 @@
                 color: blue;
             }
 
-            .jumbotron{
+            .jumbotron {
                 background: lightgray;
             }
         </style>
@@ -102,8 +102,8 @@
             <h:form id="dadosUsuario">
                 <div class="form-group">
                     <h:outputLabel value="Nome Completo"/><font color="red">*</font>
-                    <p:inputText value="#{c_Usuario.user.nome}" class="form-control"
-                                 required="true" placeholder="Insira o seu nome" maxlength="60"></p:inputText>
+                    <p:inputMask class="form-control" value="#{c_Usuario.user.nome}" required="true"
+                                 placeholder="Insira o seu nome completo" maxlength="60"/>
 
                     <h:outputLabel value="Username"/><font color="red">*</font>
                     <p:inputText value="#{c_Usuario.user.usuario}" class="form-control"
@@ -114,36 +114,40 @@
                                  required="true" placeholder="Insira a senha de acesso" maxlength="30"></p:inputText>
 
                     <h:outputLabel value="RG"/><font color="red">*</font>
-                    <p:inputText value="#{c_Usuario.user.rg}" class="form-control"
-                                 required="true" placeholder="Insira o seu RG(somente números)" maxlength="10"></p:inputText>
+                    <p:inputMask class="form-control" value="#{c_Usuario.user.rg}" mask="9999999999" required="true"
+                                 placeholder="Insira o seu RG(somente números)" maxlength="10"/>
 
                     <h:outputLabel value="CPF"/><font color="red">*</font>
-                    <p:inputText value="#{c_Usuario.user.cpf}" class="form-control"
-                                 required="true" placeholder="Insira o seu CPF(somente números)" maxlength="15"></p:inputText>
+                    <p:inputMask class="form-control" value="#{c_Usuario.user.cpf}" mask="999999999999999"
+                                 required="true" placeholder="Insira o seu CPF(somente números)" maxlength="15"/>
 
                     <h:outputLabel value="Endereço"/><font color="red">*</font>
                     <p:inputText value="#{c_Usuario.user.endereco}" class="form-control"
                                  required="true"
-                                 placeholder="Insira os dados do seu endereço(ex: rua, bairro, número, etc...)" maxlength="100"></p:inputText>
+                                 placeholder="Insira os dados do seu endereço(ex: rua, bairro, número, etc...)"
+                                 maxlength="100"></p:inputText>
 
                     <h:outputLabel value="CEP"/><font color="red">*</font>
-                    <p:inputText value="#{c_Usuario.user.cep}" class="form-control"
-                                 required="true" placeholder="Insira o CEP da sua rua(somente números)" maxlength="9"></p:inputText>
+                    <p:inputMask class="form-control" value="#{c_Usuario.user.cep}" mask="99999-999" required="true"
+                                 placeholder="Insira o CEP da sua rua(somente números)" maxlength="8"/>
 
                     <h:outputLabel value="Cidade"/><font color="red">*</font>
                     <p:inputText value="#{c_Usuario.user.cidade}" class="form-control"
                                  required="true" placeholder="Insira a cidade onde mora" maxlength="60"></p:inputText>
 
                     <h:outputLabel value="Estado"/><font color="red">*</font>
-                    <p:inputText value="#{c_Usuario.user.estado}" class="form-control"
-                                 required="true" placeholder="Insira o Estado onde mora" maxlength="20"></p:inputText>
+                    <p:inputMask class="form-control" value="#{c_Usuario.user.estado}" mask="aa" required="true"
+                                 placeholder="Insira a sigla do Estado onde mora" maxlength="2"/>
 
                     <h:outputLabel value="E-mail"/><font color="red">*</font>
                     <p:inputText value="#{c_Usuario.user.email}" class="form-control"
-                                 required="true" placeholder="Insira seu endereço de e-mail" maxlength="100"></p:inputText>
+                                 required="true" placeholder="Insira seu endereço de e-mail"
+                                 maxlength="100"></p:inputText>
 
                     <h:outputLabel value="Data Nascimento"/><font color="red">*</font>
-                    <p:inputMask class="form-control" value="#{c_Usuario.user.datanasc}" mask="99/99/9999" required="true" placeholder="DD/MM/AAAA" maxlength="10"/>
+                    <p:inputMask class="form-control" value="#{c_Usuario.user.datanasc}" mask="99/99/9999"
+                                 required="true" placeholder="DD/MM/AAAA" maxlength="10"/>
+
 
                     <h:outputText value="Perfil de Usuário"/><font color="red">*</font>
                     <div align="left" class="form-group">
