--- a/web/consultarLivro.xhtml
+++ b/web/consultarLivro.xhtml
@@ -4,7 +4,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+>
 <h:head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
@@ -46,6 +47,18 @@
                 color: blue;
             }
 
+            .tbl {
+                position: relative;
+                width: auto;
+                height: auto;
+            }
+
+            .colunas {
+                -webkit-column-width: 1300px;
+                -moz-column-width: 1300px;
+                column-width: 1300px;
+                width: 1000px;
+            }
         </style>
     </meta>
 
@@ -65,7 +78,8 @@
             <button class="fechaAjuda" onclick="fechar()">x</button>
             <b></b>
             <p>
-                Para consultar nossos livros, basta preencher o título, nome do autor ou editora e clicar em <b>Consultar</b>, caso contrário nosso sistema listará todos os livros do acervo.
+                Para consultar nossos livros, basta preencher o título, nome do autor ou editora e clicar em
+                <b>Consultar</b>, caso contrário nosso sistema listará todos os livros do acervo.
             </p>
         </p>
     </div>
@@ -83,87 +97,124 @@
                 <div class="form-group">
                     <div class="form-group">
                         <h:commandButton value="Cadastrar Livro" class="btn btn-block btn-primary"
-                                         action="cadastrarLivro?faces-redirect=true" url="cadastrarLivro.xhtml"></h:commandButton>
+                                         action="cadastrarLivro?faces-redirect=true"
+                                         url="cadastrarLivro.xhtml"></h:commandButton>
                     </div>
                     <div class="form-group">
                         <h:commandButton value="Alterar Livro" class="btn btn-block btn-primary"
-                                         action="alterarLivro?faces-redirect=true" url="cadastrarLivro.xhtml"></h:commandButton>
+                                         action="alterarLivro?faces-redirect=true"
+                                         url="cadastrarLivro.xhtml"></h:commandButton>
                     </div>
                     <div class="form-group">
                         <h:commandButton value="Deletar Livro" class="btn btn-block btn-primary"
-                                         action="deletarLivro?faces-redirect=true" url="deletarLivro.xhtml"></h:commandButton>
+                                         action="deletarLivro?faces-redirect=true"
+                                         url="deletarLivro.xhtml"></h:commandButton>
                     </div>
                 </div>
             </h:form>
             <section alig="center" class="row">
-                <div class="form-group">
+                <div class="tabela">
                     <h:form id="telaConsultaBibliotecario">
                         <div class="form-group">
                             <h:outputLabel value="Título, Autor ou Editora"/>
                             <p:inputText value="#{c_Livro.livro.titulo}" class="form-control" required="false"
-                                         maxlength="100" placeholder="Insira o título, autor ou editora do livro desejado"></p:inputText>
+                                         maxlength="100"
+                                         placeholder="Insira o título, autor ou editora do livro desejado"></p:inputText>
                         </div>
                         <div class="form-group">
                             <h:commandButton value="Buscar Livro" class="btn btn-block btn-primary"
                                              action="#{c_Livro.realizarConsultaLivroBibliotecario}"/>
                         </div>
                     </h:form>
-                    <p:dataTable value="#{c_Livro.realizarConsultaLivroBibliotecario()}" var="livro" border="9"
-                                 rendered="true"
-                                 title="Relação de Livros.">
-                        <p:column>
-                            <f:facet name="header">Id</f:facet>
-                            #{livro.codlivro}
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">Título</f:facet>
-                            #{livro.titulo}
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">Autor(a)</f:facet>
-                            #{livro.autor}
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">Editora</f:facet>
-                            #{livro.editora}
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">Ano Lançamento</f:facet>
-                            #{livro.anolancamento}
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">Cidade</f:facet>
-                            #{livro.cidade}
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">Volume</f:facet>
-                            #{livro.volume}
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">Catalogação</f:facet>
-                            #{livro.codcatalogacao}
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">Núm. Chamada</f:facet>
-                            #{livro.numchamada}
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">Dt. Cad</f:facet>
-                            #{livro.datacad}
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">Dt. Alt</f:facet>
-                            #{livro.dataalt}
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">Status</f:facet>
-                            #{livro.status}
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">Dispon</f:facet>
-                            #{livro.disponibilidade}
-                        </p:column>
-                    </p:dataTable>
+                    <h:form>
+                        <p:dataTable id="tbl" class="tbl" var="livro"
+                                     value="#{c_Livro.realizarConsultaLivroBibliotecario()}"
+                                     paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {Exporters}"
+                                     paginator="true" rows="5"
+                                     scrollWidth="1300">
+
+                            <f:facet name="header">Relação de Livros</f:facet>
+
+                            <f:facet name="{Exporters}">
+                                <div style="float:left;padding-top: 5px;">
+                                    <h:commandLink>
+                                        <p:graphicImage url="/export/images/pdf.png" width="24"
+                                                        title="Exportar todas as páginas como PDF"/>
+                                        <p:dataExporter type="pdf" target="tbl" fileName="relaçãoLivros"/>
+                                    </h:commandLink>
+                                </div>
+                                <div style="float:left;padding-top: 5px;">
+                                    <h:commandLink>
+                                        <p:graphicImage url="/export/images/xls.png" width="34"
+                                                        title="Exportar todas as páginas como planiha"/>
+                                        <p:dataExporter type="xls" target="tbl" fileName="relaçãoLivros"/>
+                                    </h:commandLink>
+                                </div>
+                            </f:facet>
+
+                            <p:column headerText="Id" width="70">
+                                <h:outputText value="#{livro.codlivro}"/>
+                            </p:column>
+
+                            <p:column headerText="Título" width="200">
+                                <h:outputText value="#{livro.titulo}"/>
+                            </p:column>
+
+                            <p:column headerText="Autor" width="100">
+                                <h:outputText value="#{livro.autor}"/>
+                            </p:column>
+
+                            <p:column headerText="Editora" width="100">
+                                <h:outputText value="#{livro.editora}"/>
+                            </p:column>
+                            <p:column headerText="Ano Lanç." width="70">
+                                <h:outputText value="#{livro.anolancamento}"/>
+                            </p:column>
+
+                            <p:column headerText="Cidade" width="100">
+                                <h:outputText value="#{livro.cidade}"/>
+                            </p:column>
+
+                            <p:column headerText="Vol." width="50">
+                                <h:outputText value="#{livro.volume}"/>
+                            </p:column>
+
+                            <p:column headerText="Cód. Catal.">
+                                <h:outputText value="#{livro.codcatalogacao}"/>
+                            </p:column>
+
+                            <p:column headerText="Num. Chamada" width="160">
+                                <h:outputText value="#{livro.numchamada}"/>
+                            </p:column>
+
+                            <p:column headerText="Dt. Cad." width="110">
+                                <h:outputText value="#{livro.datacad}"/>
+                            </p:column>
+
+                            <p:column headerText="Dt. Alt." width="110">
+                                <h:outputText value="#{livro.dataalt}"/>
+                            </p:column>
+
+                            <p:column headerText="Status">
+                                <h:outputText value="#{livro.status}"/>
+                            </p:column>
+
+                            <p:column headerText="Disp." width="70">
+                                <h:outputText value="#{livro.disponibilidade}"/>
+                            </p:column>
+
+                        </p:dataTable>
+
+                        <h5>Exportar somente a página atual</h5>
+                        <h:commandLink>
+                            <p:graphicImage url="/export/images/pdf.png" width="24" title="Exportar como PDF"/>
+                            <p:dataExporter type="pdf" target="tbl" fileName="relaçãoLivros" pageOnly="true"/>
+                        </h:commandLink>
+                        <h:commandLink>
+                            <p:graphicImage url="/export/images/xls.png" width="40" title="Exportar como planilha"/>
+                            <p:dataExporter type="xls" target="tbl" fileName="relaçãoLivros" pageOnly="true"/>
+                        </h:commandLink>
+                    </h:form>
                 </div>
             </section>
         </div>
