--- a/web/deletarEmprestimo.xhtml
+++ b/web/deletarEmprestimo.xhtml
@@ -130,11 +130,11 @@
                 <p:outputLabel value="Empréstimos"/><font color="red">*</font>
                 <h:form id="Empréstimo">
                     <p:selectOneMenu filter="true" value="#{c_Emprestimo.emp.codemprestimo}" filterMatchMode="contains"
-                                     required="true" style="width:1290px" panelStyle="width:1320px">
+                                     required="true" style="width:1290px" panelStyle="width:1330px">
 
                         <f:selectItem noSelectionOption="true" itemLabel="Selecione um empréstimo"/>
                         <f:selectItems value="#{c_Emprestimo.consultaEmprestimosEmVigor()}" var="emp"
-                                       itemLabel="Nome: #{emp.nome_user} | E-mail: #{emp.email_user} | Título: #{emp.titulo_book} | Autor: #{emp.autor_book} | Editora: #{emp.editora_book} | Ano lanç.: #{emp.anolancamento_book}"
+                                       itemLabel="Nome: #{emp.nome_user} | E-mail: #{emp.email_user} | Título: #{emp.titulo_book} | Autor: #{emp.autor_book} | Editora: #{emp.editora_book} | Ano Lanç.: #{emp.anolancamento_book}"
                                        itemValue="#{emp.codemprestimo}"/>
                     </p:selectOneMenu>
                     <div id="conf" class="conf">
