--- a/web/deletarLivro.xhtml
+++ b/web/deletarLivro.xhtml
@@ -126,103 +126,45 @@
                                          action="cadastrarLivro?faces-redirect=true" url="cadastrarLivro.xhtml"></h:commandButton>
                     </div>
                     <div class="form-group">
+                        <h:commandButton value="Consultar Livro" class="btn btn-block btn-primary"
+                                         action="consultarLivro?faces-redirect=true" url="cadastrarLivro.xhtml"></h:commandButton>
+                    </div>
+                    <div class="form-group">
                         <h:commandButton value="Alterar Livro" class="btn btn-block btn-primary"
                                          action="alterarLivro?faces-redirect=true" url="cadastrarLivro.xhtml"></h:commandButton>
                     </div>
                 </div>
             </h:form>
-            <h:form id="buscarLivro">
-                <div class="form-group">
-                    <h:outputLabel value="Título, Autor ou Editora"/>
-                    <p:inputText maxlength="100" value="#{c_Livro.livro.titulo}" class="form-control" required="false" placeholder="Insira o título, autor ou editora do livro desejado"></p:inputText>
-                </div>
-                <div class="form-group">
-                    <h:commandButton value="Buscar Livro" class="btn btn-block btn-primary"
-                                     action="#{c_Livro.realizarConsultaLivroBibliotecario}"></h:commandButton>
-                </div>
-            </h:form>
-            <section alig="center" class="right">
-                <div class="form-group">
-                    <p:dataTable value="#{c_Livro.realizarConsultaLivroBibliotecario()}" var="livro" border="9"
-                                 rendered="true"
-                                 title="Relação de Livros.">
-                        <p:column>
-                            <f:facet name="header">Id</f:facet>
-                            #{livro.codlivro}
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">Título</f:facet>
-                            #{livro.titulo}
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">Autor(a)</f:facet>
-                            #{livro.autor}
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">Editora</f:facet>
-                            #{livro.editora}
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">Ano Lançamento</f:facet>
-                            #{livro.anolancamento}
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">Volume</f:facet>
-                            #{livro.volume}
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">Catalogação</f:facet>
-                            #{livro.codcatalogacao}
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">Núm. Chamada</f:facet>
-                            #{livro.numchamada}
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">Dt. Cad</f:facet>
-                            #{livro.datacad}
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">Dt. Alt</f:facet>
-                            #{livro.dataalt}
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">Status</f:facet>
-                            #{livro.status}
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">Dispon</f:facet>
-                            #{livro.disponibilidade}
-                        </p:column>
-                    </p:dataTable>
-                    <h:form id="deletarLivro">
+            <p:outputLabel value="Livros"/><font color="red">*</font>
+            <h:form id="Livro">
+                <p:selectOneMenu filter="true" value="#{c_Livro.livro.codlivro}" filterMatchMode="contains"
+                                 required="true" style="width:1290px" panelStyle="width:1330px">
+
+                    <f:selectItem noSelectionOption="true" itemLabel="Selecione um livro"/>
+                    <f:selectItems value="#{c_Livro.realizarConsultaLivroBibliotecarioSoAtivos()}" var="book"
+                                   itemLabel="Título: #{book.titulo} | Autor: #{book.autor} | Editora: #{book.editora} | Ano Lanç.: #{book.anolancamento} | Volume: #{book.volume} | Catalogação: #{book.codcatalogacao} | Num. Chamada: #{book.numchamada}"
+                                   itemValue="#{book.codlivro}"/>
+                </p:selectOneMenu>
+                <div id="conf" class="conf">
+                    <p align="center">
+                        <h:outputLabel value="Deseja deletar o livro selecionado?"/>
+                    </p>
+                    <h:form>
                         <div class="form-group">
-                            <h:outputLabel value="Id do Livro"/><font color="red">*</font>
-                            <p:inputText value="#{c_Livro.livro.codlivro}" class="form-control"
-                                         required="true" placeholder="Insira o código Id do livro"></p:inputText>
-                        </div>
-                        <div id="conf" class="conf">
-                            <p align="center">
-                                <h:outputLabel value="Deseja deletar o livro selecionado?"/>
-                            </p>
-                            <h:form>
-                                <div class="form-group">
-                                    <h:commandButton value="Sim" class="btn btn-block btn-primary"
-                                                     action="#{c_Livro.realizarDelecaoLivro}"/>
-                                </div>
-                                <div class="form-group">
-                                    <h:commandButton value="Não" class="btn btn-block btn-primary"
-                                                     onclick="fecha()"></h:commandButton>
-                                </div>
-                            </h:form>
+                            <h:commandButton value="Sim" class="btn btn-block btn-primary"
+                                             action="#{c_Livro.realizarDelecaoLivro}"/>
                         </div>
                         <div class="form-group">
-                            <h:commandButton value="Deletar Livro" class="btn btn-block btn-primary"
-                                             rendered="true" onclick="abri()"></h:commandButton>
+                            <h:commandButton value="Não" class="btn btn-block btn-primary"
+                                             onclick="fecha()"></h:commandButton>
                         </div>
                     </h:form>
                 </div>
-            </section>
+                <div class="form-group">
+                    <h:commandButton value="Deletar Livro" class="btn btn-block btn-primary"
+                                     rendered="true" onclick="abri()"></h:commandButton>
+                </div>
+            </h:form>
         </div>
     </section>
 </h:body>
